--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Single Price Grid Component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -14,31 +14,73 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
+
 <body>
-  Join our community
+  <div class="wrapper">
+    <div class="card">
+      <header>
+        <h1>Join our community</h1>
 
-  30-day, hassle-free money back guarantee
+        <div class="h2-header">
+          30-day, hassle-free money back guarantee
+        </div>
 
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
+        <div class="text">
+          Gain access to our full library of tutorials along with expert code reviews.<br>
+          Perfect for any developers who are serious about honing their skills.
+        </div>
+      </header>
 
-  Monthly Subscription
+      <div class="container">
+        <div class="left-box">
+          <div class="subscription">
+            <h2>
+              Monthly Subscription
+            </h2>
 
-  &dollar;29 per month
+            <div class="dollar">
+              <h1 class="white">&dollar;29<span> per month</span></h1>
+            </div>
 
-  Full access for less than &dollar;1 a day
+            <p>Full access for less than &dollar;1 a day</p>
 
-  Sign Up
+            <button>Sign Up</button>
+          </div>
+        </div>
 
-  Why Us
+        <div class="right-box">
+          <div class="why-us">
 
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
+            <h2>Why Us</h2>
+
+            <ul>
+              <li>
+                Tutorials by industry experts
+              </li>
+              <li>
+                Peer &amp; expert code review
+              </li>
+              <li>
+                Coding exercises
+              </li>
+              <li>
+                Access to our GitHub repos
+              </li>
+              <li>
+                Community forum
+              </li>
+              <li>
+                Flashcard decks
+              </li>
+              <li>
+              New videos every week
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
   
   <footer>
     <p class="attribution">
